# VideoFileAnalysis

./: CMakeLists.txt  README.md  main.cpp
decoder/: DecoderBase.cpp  DecoderBase.h
frameworks/: MediaType.h  MuxerTree.cpp  MuxerTree.h
muxer/: MuxerBase.cpp  MuxerBase.h  flv.cpp  flv.h  mp4.cpp  mp4.h  mp4_types.h
paser/: H264Paser.cpp  H264Paser.h  PaserBase.cpp  PaserBase.h
test/: Test_h264Paser.cpp
